0026599: Visualization, TKOpenGl - gradient background should reset model transformation in Core profile

OpenGl_View::DrawBackground() - reset ModelWorldState as wellm not just WorldViewState.
Test case for issue CR26599